--- a/html/cart.html
+++ b/html/cart.html
@@ -52,6 +52,7 @@
                 <div class="box_info">
                     <div class="img_box"><img src="../img/image1.JPG" class="img_min" alt=""></div>
                     <ul class="ul_box">
+                        <li class="cart_font">NAME：Rockefeller Center</li>
                         <li class="cart_font">Price:$220 billion</li>
                         <li class="cart_font">Qty: 1</li>
                     </ul>
@@ -63,6 +64,7 @@
                 <div class="box_info">
                     <div class="img_box"><img src="../img/image11.jpg" class="img_min" alt=""></div>
                     <ul class="ul_box">
+                        <li class="cart_font">NAME：Percent</li>
                         <li class="cart_font">Price:$900 million</li>
                         <li class="cart_font">Qty: 2</li>
                     </ul>
@@ -74,6 +76,7 @@
                 <div class="box_info">
                     <div class="img_box"><img src="../img/image4.JPG" class="img_min" alt=""></div>
                     <ul class="ul_box">
+                        <li class="cart_font">NAME：The Face Suites</li>
                         <li class="cart_font">Price:$25 billion</li>
                         <li class="cart_font">Qty: 4</li>
                     </ul>
@@ -85,7 +88,8 @@
                 <div class="box_info">
                     <div class="img_box"><img src="../img/image8.JPG" class="img_min" alt=""></div>
                     <ul class="ul_box">
-                        <li class="cart_font">Price:$1300 million</li>
+                        <li class="cart_font">NAME：Percent</li>
+                        <li class="cart_font">Price:$1,300 million</li>
                         <li class="cart_font">Qty: 2</li>
                     </ul>
                     <div class="edit_rem">
@@ -96,6 +100,7 @@
                 <div class="box_info">
                     <div class="img_box"><img src="../img/image2.JPG" class="img_min" alt=""></div>
                     <ul class="ul_box">
+                        <li class="cart_font">NAME：Burj Dubai</li>
                         <li class="cart_font">Price:$680 billion</li>
                         <li class="cart_font">Qty: 1</li>
                     </ul>
