--- a/html/detail.html
+++ b/html/detail.html
@@ -36,34 +36,34 @@
                 <div class="box">
                     <span class="font_info">THE FACE Suites</span>
                     <ul>
-                        <li>COUNTRY：Malaysia</li>
+                        <li class="icon">COUNTRY：Malaysia</li>
                         <!-- マレーシア -->
-                        <li>REGION：Kuala Lumpur</li>
-                        <li>PRICE：25,000,000,000 JPY</li>
+                        <li class="icon">REGION：Kuala Lumpur</li>
+                        <li class="icon">PRICE：25,000,000,000 JPY</li>
                         <!-- ￥250億 -->
                     </ul>
 
                     <div class="detail">
                         <span class="font_info">FACILITY INFORMATION</span>
                         <ul>
-                            <li><i class="fas fa-swimmer"></i> Pool</li>
-                            <li><i class="fas fa-car"></i> Free Parking</li>
-                            <li><i class="fas fa-wifi"></i> Free Wi-Fi/Internet</li>
-                            <li><i class="fas fa-users"></i> Concierge</li>
-                            <li><i class="fas fa-glass-martini"></i> Bar/Lounge</li>
-                            <li><i class="fas fa-dumbbell"></i> Gym/Fitness</li>
-                            <li><i class="fas fa-broom"></i> Dry Cleaning</li>
+                            <li class="icon"><i class="fas fa-swimmer"></i> Pool</li>
+                            <li class="icon"><i class="fas fa-car"></i> Free Parking</li>
+                            <li class="icon"><i class="fas fa-wifi"></i> Free Wi-Fi/Internet</li>
+                            <li class="icon"><i class="fas fa-users"></i> Concierge</li>
+                            <li class="icon"><i class="fas fa-glass-martini"></i> Bar/Lounge</li>
+                            <li class="icon"><i class="fas fa-dumbbell"></i> Gym/Fitness</li>
+                            <li class="icon"><i class="fas fa-broom"></i> Dry Cleaning</li>
                         </ul>
                     </div>
                     <div class="detail_room">
                         <span class="font_info">ROOM FEATURES </span>
                         <ul>
-                            <li><i class="fas fa-bed"></i> Suite Room</li>
-                            <li><i class="fas fa-mug-hot"></i> Family Kitchen</li>
-                            <li><i class="fas fa-columns"></i> In-room Refrigerator</li>
-                            <li><i class="fas fa-smoking-ban"></i> Non-Smoking Room</li>
-                            <li><i class="fas fa-check"></i> Microwave</li>
-                            <li><i class="far fa-snowflake"></i> Air-conditioned Room</li>
+                            <li class="icon"><i class="fas fa-bed"></i> Suite Room</li>
+                            <li class="icon"><i class="fas fa-mug-hot"></i> Family Kitchen</li>
+                            <li class="icon"><i class="fas fa-columns"></i> In-room Refrigerator</li>
+                            <li class="icon"><i class="fas fa-smoking-ban"></i> Non-Smoking Room</li>
+                            <li class="icon"><i class="fas fa-check"></i> Microwave</li>
+                            <li class="icon"><i class="far fa-snowflake"></i> Air-conditioned Room</li>
                         </ul>
                     </div>
 
