--- a/top.html
+++ b/top.html
@@ -78,7 +78,7 @@
                 <a href="./html/detail.html">
                     <img src="./img/image4.jpg">
                     <ul class="border_box">
-                        <li class="border">NAME：The Face</li>
+                        <li class="border">NAME：The Face Suites</li>
                         <li class="border">COUNTRY：MYS</li>
                         <!-- マレーシア -->
                         <li class="border">REGION：Kuala Lumpur</li>
