--- a/top.html
+++ b/top.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" type="text/css" href="./css/top.css">
 
+    <!-- add -->
+    <link rel="stylesheet" type="text/css" href="./css/common.css">
 
     <title>MSS-PROPERTY</title>
 </head>
@@ -27,18 +29,20 @@
     <section id="back">
         <section class="property"><span>PROPERTY</span></section>
 
-        <article class="top">
+        <!-- article.product_rows class chenge -->
+        <!-- <article class="top"> -->
+        <article class="product_rows">
             <section class="box">
                 <a href="./html/detail.html">
                     <img src="./img/image2.jpg">
 
                     <ul class="border_box">
                         <li class="border">NAME：Burj Dubai</li>
-                        <li class="border">COUNTRY：UAE</li>
                         <!-- アラブ首長国連邦 -->
+                        <li class="border">COUNTRY：UAE</li>
                         <li class="border">REGION：Dubai</li>
-                        <li class="border">PRICE：$680 billion</li>
                         <!-- ￥6800億5千万 -->
+                        <li class="border">PRICE：$680 billion</li>
                     </ul>
 
                 </a>
@@ -53,8 +57,8 @@
                         <li class="border">NAME：Rockefeller Center</li>
                         <li class="border">COUNTRY：USA</li>
                         <li class="border">REGION：New York</li>
-                        <li class="border">PRICE：$220 billion</li>
                         <!-- ￥2,200億 -->
+                        <li class="border">PRICE：$220 billion</li>
                     </ul>
                 </a>
             </section>
@@ -66,24 +70,26 @@
                         <li class="border">NAME：Tokyo Sky Tree</li>
                         <li class="border">COUNTRY：JPN</li>
                         <li class="border">REGION：TOKYO</li>
-                        <li class="border">PRICE：$65 billion</li>
                         <!-- ￥650億 -->
+                        <li class="border">PRICE：$65 billion</li>
                     </ul>
                 </a>
             </section>
         </article>
 
-        <article class="top_middle">
+        <!-- article.product_rows class chenge -->
+        <!-- <article class="top_middle"> -->
+        <article class="product_rows">
             <section class="box_middle">
                 <a href="./html/detail.html">
                     <img src="./img/image4.jpg">
                     <ul class="border_box">
                         <li class="border">NAME：The Face Suites</li>
-                        <li class="border">COUNTRY：MYS</li>
                         <!-- マレーシア -->
+                        <li class="border">COUNTRY：MYS</li>
                         <li class="border">REGION：Kuala Lumpur</li>
-                        <li class="border">PRICE：$25 billion</li>
                         <!-- ￥250億 -->
+                        <li class="border">PRICE：$25 billion</li>
                     </ul>
                 </a>
             </section>
@@ -93,11 +99,11 @@
                     <img src="./img/image5.jpg">
                     <ul class="border_box">
                         <li class="border">NAME：Tretsym bar</li>
-                        <li class="border">COUNTRY：CAM</li>
                         <!-- カンボジア -->
+                        <li class="border">COUNTRY：CAM</li>
                         <li class="border">REGION：Mekong</li>
-                        <li class="border">PRICE：$1100 million</li>
                         <!-- ￥11億2400万 -->
+                        <li class="border">PRICE：$1100 million</li>
                     </ul>
                 </a>
             </section>
@@ -107,18 +113,19 @@
                     <img src="./img/image7.jpg">
                     <ul class="border_box">
                         <li class="border">NAME：Crescent</li>
-                        <li class="border">COUNTRY：VNM</li>
                         <!-- ベトナム -->
+                        <li class="border">COUNTRY：VNM</li>
                         <li class="border">REGION：Ho Chi Minh</li>
-                        <li class="border">PRICE：$4000 million</li>
                         <!-- ￥40億 -->
+                        <li class="border">PRICE：$4000 million</li>
                     </ul>
                 </a>
             </section>
         </article>
 
-        <article class="under">
-
+        <!-- article.product_rows class chenge -->
+        <!-- <article class="under"> -->
+        <article class="product_rows">
             <section class="box_under">
                 <a href="./html/detail.html">
                     <img src="./img/image6.jpg">
@@ -126,8 +133,8 @@
                         <li class="border">NAME：Proget</li>
                         <li class="border">COUNTRY：JPN</li>
                         <li class="border">REGION：TOKYO</li>
-                        <li class="border">PRICE：$1300 million</li>
                         <!-- ￥13億 -->
+                        <li class="border">PRICE：$1300 million</li>
                     </ul>
                 </a>
             </section>
@@ -139,8 +146,8 @@
                         <li class="border">NAME：Percent</li>
                         <li class="border">COUNTRY：JPN</li>
                         <li class="border">REGION：KYOTO</li>
-                        <li class="border">PRICE：$300 billion</li>
                         <!-- ￥3億 -->
+                        <li class="border">PRICE：$300 billion</li>
                     </ul>
                 </a>
             </section>
@@ -152,14 +159,16 @@
                         <li class="border">NAME：Eclipse</li>
                         <li class="border">COUNTRY：JPN</li>
                         <li class="border">REGION：OSAKA</li>
-                        <li class="border">PRICE：$10 billion</li>
                         <!-- 100億 -->
+                        <li class="border">PRICE：$10 billion</li>
                     </ul>
                 </a>
             </section>
         </article>
 
-        <article class="foot">
+        <!-- article.product_rows class chenge -->
+        <!-- <article class="foot"> -->
+        <article class="product_rows">
             <section class="box_foot">
                 <a href="./html/detail.html">
                     <img src="./img/image10.jpg">
@@ -167,8 +176,8 @@
                         <li class="border">NAME：VS Code</li>
                         <li class="border">COUNTRY：JPN</li>
                         <li class="border">REGION：HIROSHIMA</li>
-                        <li class="border">PRICE：$600 million</li>
                         <!-- ￥6億 -->
+                        <li class="border">PRICE：$600 million</li>
                     </ul>
                 </a>
             </section>
@@ -180,8 +189,8 @@
                         <li class="border">NAME：Atom</li>
                         <li class="border">COUNTRY：JPN</li>
                         <li class="border">REGION：TOKYO</li>
-                        <li class="border">PRICE：$900 million</li>
                         <!-- ￥9億 -->
+                        <li class="border">PRICE：$900 million</li>
                     </ul>
                 </a>
             </section>
@@ -193,8 +202,8 @@
                         <li class="border">NAME：Python N55</li>
                         <li class="border">COUNTRY：JPN</li>
                         <li class="border">REGION：SAPPORO</li>
+                        <!-- 3億6000万 -->
                         <li class="border">PRICE：$360 million</li>
-                        <!-- 3億６０００万 -->
                     </ul>
                 </a>
             </section>
