--- a/html/cart.html
+++ b/html/cart.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="../css/cart.css">
-    <link rel="stylesheet" type="text/css" href="../css/detail.css">
+
+    <!-- undo -->
+    <!-- <link rel="stylesheet" type="text/css" href="../css/detail.css"> -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/black/pace-theme-center-circle.min.css" />
-    <link rel="stylesheet" type="text/css" href="../css/top.css">
+
+    <!-- undo -->
+    <!-- <link rel="stylesheet" type="text/css" href="../css/top.css"> -->
+    <!-- add -->
+    <link rel="stylesheet" type="text/css" href="../css/common.css">
+
+
     <title>CART</title>
 </head>
 
