--- a/html/detail.html
+++ b/html/detail.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="../css/detail.css">
-    <link rel="stylesheet" type="text/css" href="../css/top.css">
+
+    <!-- undo -->
+    <!-- <link rel="stylesheet" type="text/css" href="../css/top.css"> -->
+    <!-- add -->
+    <link rel="stylesheet" type="text/css" href="../css/common.css">
+
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 
     <script type="text/javascript" src="../js/detail.js"></script>
@@ -27,7 +32,7 @@
     <section id="back">
         <section class="property"><span>DETAIL</span></section>
 
-
+        <!-- article.product_rows class chenge -->
         <article class="top_middle_detal">
             <section class="img_section">
 
@@ -36,11 +41,11 @@
                 <div class="box">
                     <span class="font_info">THE FACE Suites</span>
                     <ul>
-                        <li class="icon">COUNTRY：Malaysia</li>
                         <!-- マレーシア -->
+                        <li class="icon">COUNTRY：Malaysia</li>
                         <li class="icon">REGION：Kuala Lumpur</li>
-                        <li class="icon">PRICE：25,000,000,000 JPY</li>
                         <!-- ￥250億 -->
+                        <li class="icon">PRICE：25,000,000,000 JPY</li>
                     </ul>
 
                     <div class="detail">
